@@ -25,7 +25,9 @@ and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic
 * Enable to use a particular version of DTC from the wrapper by setting the environment variable 'DTC_VERSION' accordingly.
 
 === changed
+
 * Improve confluence export performance when only ancestorIds are given
+* Make `dtcw` (and some other shell executables) https://www.shellcheck.net/[shellcheck] proof
 
 == 2.1.0 - 2022-08-15
 
